# tailcloak

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.claude/: settings.local.json
src/: config.rs  daemon.rs  launchd.rs  main.rs  network.rs  pause.rs  tailscale.rs
