[package]
name = "tailcloak"
authors = ["fabitosh"]
version = "0.1.0"
edition = "2024"
# macOS-only crate; build docs only for a Darwin target so docs.rs doesn't fail.
[package.metadata.docs.rs]
targets = ["aarch64-apple-darwin"]

[dependencies]
netdev = { version = "0.44.0", features = ["serde"] }
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
system-configuration = "0.7.0"
core-foundation = "0.9"

[dev-dependencies]
tempfile = "3"
