[package]
name = "tailcloak"
version = "0.1.0"
edition = "2024"
description = "Automatically toggle Tailscale on/off based on trusted default-gateway MAC addresses (macOS)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fabitosh/tailcloak"
readme = "README.md"
keywords = ["tailscale", "vpn", "macos", "launchd", "networking"]
categories = ["command-line-utilities"]

# macOS-only crate; build docs only for a Darwin target so docs.rs doesn't fail.
[package.metadata.docs.rs]
targets = ["aarch64-apple-darwin"]

[dependencies]
netdev = { version = "0.44.0", features = ["serde"] }
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
system-configuration = "0.7.0"
core-foundation = "0.9"

[dev-dependencies]
tempfile = "3"
